syntax = "proto3";

service SessionRoute {
    rpc CreateID(UserData) returns (Session) {}
    rpc CheckID(Session) returns (UserData) {}
    rpc DeleteID(Session) returns (Empty) {}
}

message Session {
    string Id = 1;
}

message UserData {
    int32 UserID = 1;
}

message Empty {}
